Fix aligning issues for course list filters, align left by default

--- a/assets/blocks/course-list-block/course-list-block-editor.scss
+++ b/assets/blocks/course-list-block/course-list-block-editor.scss
@@ -19,5 +19,9 @@
 				width: 100%;
 			}
 		}
+		/* Fixes left or right alignment of filter block or post template breaking the design in Divi */
+		& > * {
+			clear: both;
+		}
 	}
 }
